# VCat

./: .gitignore  LICENSE  LLM_INTEGRATION_SPEC.md  README.md  SPEC_DIALOG_FEATURE.md  VCat_Features_Documentation.html  llm_integration_report.md  notes.md  pyproject.toml  requirements.txt  run.sh  task_plan.md  test_room.sh
docs/: SPEC_DIALOG_FEATURE.md
src/: behavior_config.json  communication.py  connection.py  current_pet.json  llm_config.json  main_window.py  menu_bar.py  pet_data_loader.py  pet_health.py  pets_info.json  toolbar_pet.py  utils.py
src/behavior/: __init__.py  adapter.py  config.py  drag_pet.py  manager.py  pet_actions.py
src/behavior/actions/: __init__.py  pet_code.py  pet_code_sea_terminal.py  pet_move_to_portal.py  pet_play.py  pet_random_walk.py  pet_sit.py  pet_sleep.py  pet_startdefault.py
src/chat/: __init__.py  commands.py  handler.py  voice.py  whisper_transcriber.py
src/llm/: __init__.py  config.py  openai_provider.py  personality.py  provider.py  security.py  session.py
src/teleport/: db_connection.py  teleport_cat.py
src/ui/: chat_dialog.py  llm_settings_panel.py  onboarding_dialog.py  pet_widget.py  settings_window.py  setup_wizard.py
src/utils/: macos_window.py  permissions.py
