[project]
name = "vcat"
version = "0.1.0"
description = "VCat - A desktop pet application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pyobjc-framework-Cocoa>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
