[project]
name = "vcat"
version = "0.1.0"
description = "VCat - A desktop pet application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0",
    "pyobjc-framework-Cocoa>=9.0",
    "pyobjc-framework-quartz>=11.1",
    "supabase>=2.27.0",
    # Voice input (Whisper for transcription in chat dialog)
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
